--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@types/draftjs-to-html": "^0.8.1",
     "@types/html-to-draftjs": "^1.4.0",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-draft-wysiwyg": "^1.13.3",
     "@types/styled-components": "^5.1.14",
     "@types/uuid": "^8.3.1",
